syntax = "proto3";
option java_multiple_files =  true;
package org.protobuf;

message EmployeeResponse{
    string first_name = 1;
    string last_name = 2;
    int64 employee_id = 3;
}

message EmployeeRequest{
    int64 employee_id = 1;
}

service EmployeeService{
    rpc GetEmployee(EmployeeRequest) returns (EmployeeResponse);
}